# hook_any_x64

./: .gitignore  .gitmodules  CMakeLists.txt  CmakePresets.json  LICENSE.md  detouracceptor.cpp  detouracceptor.h  fn_hook.cpp  fn_hook.h  notifydetouracceptor.cpp  notifydetouracceptor.h  patchcode.cpp  patchcode.h  portfile.cmake  readme.md  shared.h  sigscan.cpp  sigscan.h  vcpkg.json
Licenses/: LICENSE_asmjit.md  LICENSE_hook_any_x64.md
include/: sigscan.h
include/hook_any_x64/: fn_hook.h  notifydetouracceptor.h  shared.h  sigscan.h
src/: detouracceptor.cpp  detouracceptor.h  fn_hook.cpp  fn_hook.h  notifydetouracceptor.cpp  notifydetouracceptor.h  patchcode.cpp  patchcode.h  shared.h  sigscan.cpp
test/: notify_modify_test.cpp  notify_test.cpp
